fixed CSS alignment for text on the form page

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -223,7 +223,7 @@ p {
 
 .add-field-text {
   color: white;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   margin-left: 20px;
 }
 
@@ -236,9 +236,9 @@ p {
 }
 
 .date-and-mood  {
-  margin-top: 10px;
+  margin-top: 50px;
   justify-content: center;
-  padding-bottom: 70px;
+  /* padding-bottom: 70px; */
 }
 
 .h1-form  {
